# marvin-voice-core

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  Dockerfile  README.md  TODOS.md  ack_templates.py  affirmative.py  agent_gaps_resolved.json  alt_rescue.py  audio_listener.py  audio_mixing.py  audio_position_source.py  bridge_agent.py  bridge_emitters.py  callback_delivery.py  car_mode.py  car_open.py  car_presence.py  claude_sessions_state.py  cloudflare_tunnel.py  command_fastpath.py  consent_manager.py  context_injector.py  cover_palette.py  davey_bridge.py  decrypt_health.py  departure_stats.py  diary_comic_poster.py  discord_temperature_monitor.py  discord_voice_engine.py  dj_life_context.py  dj_tail_schedule.py  ducking_agent.py  dynamic_msg_cache.py  error_dispatcher.py  game_dict_manager.py  (+142 more)
.runtime_backup_20260524_131255/: consent.json.before_migrate  music_memory.json.before_migrate
assets/: busted.html  busted99.html  pitch_demo.html  pitch_demo_0516.html  pitch_demo_0517.html
cogs/: busted99_cog.py  detective_cog.py  game_cog.py  gm_commands.py  music_cog.py  turtle_soup_cog.py  voice_controller.py  voice_controller_commands.py  voice_controller_connection.py  voice_controller_emotion.py  voice_controller_music_proxy.py  voice_controller_playback.py  voice_controller_social.py  voice_controller_state_proxy.py  voice_controller_system_loops.py  voice_views.py
data/: bad_cover_blacklist.json  phase0_baseline_20260523_064118.json  phase0_baseline_per_speaker_20260523_064118.json  phase0_mood_flip_20260523_055710.jsonl  (+2 more)
(+845 files in other folders)
